--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(magrittr,"%>%")
+importFrom(parallel,mclapply)
 importFrom(pracma,Diag)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
