--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,13 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_freqpoly)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_x_log10)
+importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(magrittr,"%>%")
+importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(pracma,Diag)
 importFrom(readr,read_csv)
