--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_eh)
 export(calc_plot_map_stats)
 export(draw_rects)
 export(load_genes)
+export(max_lengths)
 export(snpgds_parse)
 export(snpgds_sample_subset)
 export(snpgds_snp_subset)
@@ -32,6 +33,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(magrittr,"%>%")
+importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(pracma,Diag)
 importFrom(readr,read_csv)
