added some functions updated others

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(allele_richness)
 export(calc_eh)
 export(calc_plot_map_stats)
+export(coverage_by_chrom)
 export(draw_rects)
 export(load_genes)
 export(max_lengths)
@@ -40,3 +41,5 @@ importFrom(readr,read_csv)
 importFrom(readr,write_csv)
 importFrom(scrime,rowTables)
 importFrom(stringr,str_c)
+importFrom(tibble,add_row)
+importFrom(tibble,tibble)
