new way of getting chrom spans

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(max_lengths)
 export(snpgds_parse)
 export(snpgds_sample_subset)
 export(snpgds_snp_subset)
+export(span_by_chrom)
 import(SNPRelate)
 importFrom(GGally,ggmatrix)
 importFrom(RColorBrewer,brewer.pal)
