--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,9 @@ importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
+importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
 importFrom(magrittr,"%>%")
 importFrom(parallel,detectCores)
