--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,4 +46,7 @@ importFrom(readr,write_csv)
 importFrom(scrime,rowTables)
 importFrom(stringr,str_c)
 importFrom(tibble,add_row)
+importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,gather)
+importFrom(tidyr,spread)
