--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(circlize,circos.rect)
 importFrom(circlize,circos.track)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(gdsfmt,index.gdsn)
